--- a/src/components/styles/CourseCard.module.css
+++ b/src/components/styles/CourseCard.module.css
@@ -2,12 +2,15 @@
     overflow: hidden;
     margin: 15px 10px;
     text-overflow: ellipsis;
-    /* border: 1px solid red; */
     box-sizing: border-box;
-
     width: 225px;
     height: fit-content;
     min-height: 250px;
+    cursor: pointer;
+}
+
+a{
+    all:unset;
 }
 
 .course > *{
