--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   font-family: "udemy sans",Helvetica,Arial,sans-serif;
 }
 
+a{
+  all:unset;
+}
+
 h2{
   font-family: serif;
   font-size: 2.2rem;
