--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,9 @@ main p{
 section{
   margin-bottom: 10px;
 }
+
+@media only screen and (max-width: 720px) {
+  h2, main h2{
+    font-size: 1.8rem;
+  }
+}
