--- a/src/components/styles/CoursePageHeader.module.css
+++ b/src/components/styles/CoursePageHeader.module.css
@@ -9,7 +9,7 @@
     margin-right: 38%;
     min-width: 650px;
     height: 100%;
-    border: red solid 2px;
+    /* border: red solid 2px; */
     background-color: inherit;
     background-color: #1c1d1f;
     color: white;
