--- a/src/components/styles/CoursePageNavBar.module.css
+++ b/src/components/styles/CoursePageNavBar.module.css
@@ -2,7 +2,9 @@
     box-sizing: border-box;
     height: 50px;
     width: 100%;
-    border: solid red 2px;
+    /* border: solid red 2px; */
+    border-bottom: 1px solid #d1d7dc;;
+
 }
 
 .nav{
@@ -10,7 +12,7 @@
     margin-left: 16%;
     margin-right: 38%;
     min-width: 650px;
-    border: solid red 2px;
+    /* border: solid red 2px; */
     display: flex;
     flex-direction: row;
     list-style-type: none;
@@ -19,7 +21,7 @@
 }
 .nav > li{
     height: 70%;
-    border: solid red 2px;
+    /* border: solid red 2px; */
     margin-left: 10px;
     margin-right: 10px;
     vertical-align: middle;
