--- a/src/components/styles/FloatingCourseCard.module.css
+++ b/src/components/styles/FloatingCourseCard.module.css
@@ -1,3 +1,10 @@
+.container{
+    position: absolute;
+    top: 15%;
+    left: 67%;
+    height: 100%;
+}
+
 .floatingCourseCard, .cardFooter{
     margin: auto;
     width: 340px;
